# pescaria-no-gelo

./: CMakeLists.txt  README.md
include/: jogo.h  peixes.h  render.h
src/: jogo.cpp  main.cpp  peixes.cpp  render.cpp
